--- a/templates/master.erb
+++ b/templates/master.erb
@@ -8,7 +8,7 @@
 # Per default, the master will automatically include all config files
 # from master.d/*.conf (master.d is a directory in the same directory
 # as the main master config file).
-#default_include: master.d/*.conf
+default_include: master.d/*.conf
 
 # The address of the interface to bind to:
 interface: <%= @master_interface %>
