--- a/templates/api.erb
+++ b/templates/api.erb
@@ -5,18 +5,18 @@ rest_cherrypy:
   debug: <%= @api_cherrypy_debug %>
   ssl_crt: <%= @api_cherrypy_ssl_crt %>
   ssl_key: <%= @api_cherrypy_ssl_key %>
-  disable_ssl: <%= @api_cherrypy_disable_ssl %>
-  webhook_disable_auth: <%= @api_cherrypy_webhook_disable_auth %>
-  webhook_url: <%= @api_cherrypy_webhook_url %>
-  thread_pool: <%= @api_cherrypy_thread_pool %>
-  socket_queue_size: <%= @api_cherrypy_socket_queue_size %>
-  max_request_body_size: <%= @api_cherrypy_max_request_body_size %>
-  collect_stats: <%= @api_cherrypy_collect_stats %>
-  static: <%= @api_cherrypy_static %>
-  static_path: <%= @api_cherrypy_static_path %>
-  app: <%= @api_cherrypy_app %>
-  app_path: <%= @api_cherrypy_app_path %>
-  root_prefix: <%= @api_cherrypy_root_prefix %>
+#  disable_ssl: <%= @api_cherrypy_disable_ssl %>
+#  webhook_disable_auth: <%= @api_cherrypy_webhook_disable_auth %>
+#  webhook_url: <%= @api_cherrypy_webhook_url %>
+#  thread_pool: <%= @api_cherrypy_thread_pool %>
+#  socket_queue_size: <%= @api_cherrypy_socket_queue_size %>
+#  max_request_body_size: <%= @api_cherrypy_max_request_body_size %>
+#  collect_stats: <%= @api_cherrypy_collect_stats %>
+#  static: <%= @api_cherrypy_static %>
+#  static_path: <%= @api_cherrypy_static_path %>
+#  app: <%= @api_cherrypy_app %>
+#  app_path: <%= @api_cherrypy_app_path %>
+#  root_prefix: <%= @api_cherrypy_root_prefix %>
 <% end %>
 
 <% if @api_enable_tornado %>
