Update for PKI multi master options.

--- a/templates/master.erb
+++ b/templates/master.erb
@@ -637,6 +637,12 @@ log_level_logfile: <%= @master_log_level_logfile %>
 #
 #range_server: range:80
 
+#####     Salt Cluster settings     #####
+##########################################
+#
+master_sign_pubkey: <%= @master_sign_pubkey %>
+master_sign_key_name: <%= @master_sign_key_name %>
+###
 
 #####     Windows Software Repo settings #####
 ##############################################
